deploy/k3s/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: uspc
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:16.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: uspc-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: uspc
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
