deploy/k3s/04-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: uspc
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:27.1.4-apache
          ports:
            - containerPort: 80
              hostPort: 8081
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html/data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: uspc-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: uspc
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
    - port: 8081
      targetPort: 80
