deploy/k3s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uspc-ingress
  namespace: uspc
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: uspc-media
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8081
